# nichebench

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  Makefile  README.md  create_datasets.py  nichebench.sample.yml  nichebench.yml  pyproject.toml  setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  sync-data-branches.yml
docker/opencode-ddev/: Dockerfile
docs/: index.md  runtime-diagnostics-playbook.md  runtime-failure-report-template.md  runtime-production-readiness-audit.md  runtime-task-authoring.md  runtime-validation-matrix.md
docs/architecture/: index.md  nichebench-harness-architecture.md
docs/operations/: environment-hygiene.md  index.md
docs/runtime/: index.md  runtime-architecture-lifecycle.md  runtime-diagnostics-playbook.md  runtime-reporting-scoring.md  runtime-smoke-tests.md  runtime-task-authoring.md
docs/tasks/: bug-fixing-tasks.md  code-generation-tasks.md  index.md  quiz-tasks.md
openspec/changes/agentic-drupal-runtime-benchmark/: proposal.md  tasks.md
openspec/changes/archive/2026-06-17-agentic-drupal-runtime-benchmark/: design.md
openspec/changes/archive/2026-06-17-drupal-runtime-failure-audit-hardening/: design.md  tasks.md
openspec/changes/archive/2026-06-17-runtime-opencode-cage-isolation/: design.md
openspec/changes/drupal-runtime-failure-audit-hardening/: proposal.md  tasks.md
openspec/changes/runtime-opencode-cage-isolation/: proposal.md  tasks.md
scripts/: forensics.py  leaderboard.py  reasoning_proxy.py  runtime_maintenance.py  runtime_smoke.py  sync_data_branches.py
src/nichebench/: __init__.py  __main__.py  env_loader.py  main.py
src/nichebench/cli/: __main__.py  app.py
src/nichebench/cli/commands/: list.py  (+5 more)
src/nichebench/config/: nichebench_config.py  settings.py
src/nichebench/core/: datamodel.py  discovery.py  executor.py  framework_loader.py  loader_yaml.py  profiles.py  prompt_loader.py  runtime_diagnostics.py  scoring.py  validation.py  workspace.py
src/nichebench/execution/: __init__.py  dispatch.py  orchestrator.py  parallel.py  persistence.py  result.py  summary.py
src/nichebench/metrics/: __init__.py  bug_fixing_metric.py  checklist.py  code_generation_metric.py  deepeval_quiz_metric.py  quiz_metric.py
src/nichebench/providers/: agentic_mut_composer.py  conversation_manager.py  judge_adapter.py  langgraph_code_agent.py  litellm_client.py  litellm_judge.py  mut_prompt_composer.py
src/nichebench/tasks/: __init__.py  data_loader.py  local_datasets.py
src/nichebench/utils/: git.py  io.py
tests/: __init__.py  test_cli.py  test_metrics.py  test_quiz_metric.py  test_tasks.py
tests/unit/: __init__.py
tests/unit/cli/: test_forensics_cmd.py
tests/unit/config/: test_config.py  test_network_config.py
tests/unit/core/: test_cage_mode.py  test_datamodel.py  test_execute_runtime_scoring.py  test_forensics.py  test_judge_runtime.py  test_prompt_loading.py  test_runtime_check_resolution.py  test_runtime_diagnostics.py  test_runtime_loader.py  test_scoring.py  test_trajectory_capture.py  test_trials.py  test_workspace.py
tests/unit/metrics/: test_bug_fixing_metric.py  test_code_generation_metric.py  test_deepeval_quiz_metric.py
tests/unit/providers/: test_langgraph_code_agent.py  test_litellm_client.py  test_litellm_client_retry.py  test_litellm_judge.py  test_mut_prompt_composer.py
(+132 files in other folders)
