[tool.poetry]
name = "nichebench"
version = "0.1.0"
description = ""
authors = ["Sergiu Nagailic (Nikro) <nikro.md@gmail.com>"]
readme = "README.md"
packages = [{include = "nichebench", from = "src"}]

[tool.poetry.scripts]
nichebench = "nichebench.cli.app:main"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.16.0"
rich = "^14.1.0"
pyyaml = "^6.0.2"
python-dotenv = "^1.1.1"
deepeval = "^3.3.9"
litellm = "^1.75.8"
pandas = "^2.3.1"
pyarrow = "^21.0.0"
langchain = "^0.3.27"
langchain-community = "^0.3.29"
langchain-litellm = "^0.2.2"
langgraph = "^0.6.7"
langchain-groq = "^0.3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-xdist = "^3.8.0"
black = "^25.1.0"
ruff = "^0.12.9"
pre-commit = "^4.3.0"

[tool.ruff.per-file-ignores]
# Allow long literal prompt strings in framework prompt modules
"src/nichebench/frameworks/*/prompts/*.py" = ["E501"]
"src/nichebench/frameworks/*/prompts/judges/*.py" = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
line-length = 120
extend-select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
